# RoadToDesktop

./: README.md
10. C++ Level 3 (OOP)/: CMakeLists.txt
10. C++ Level 3 (OOP)/include/: LessonsInclude.hpp  ProjectsInclude.hpp
10. C++ Level 3 (OOP)/include/Lessons/: Lesson09.hpp  Lesson12.hpp  Lesson13.hpp  Lesson14.hpp  Lesson15.hpp  Lesson3.hpp  Lesson6.hpp  Lesson7.hpp  Lesson8.hpp  Lesson9.hpp
10. C++ Level 3 (OOP)/src/: main.cpp
10. C++ Level 3 (OOP)/src/Lessons/: Lesson03.cpp  Lesson06.cpp  Lesson07.cpp  Lesson08.cpp  Lesson09.cpp  Lesson12.cpp  Lesson13.cpp  Lesson14.cpp  Lesson15.cpp  Lesson3.cpp  Lesson6.cpp  Lesson7.cpp  Lesson8.cpp  Lesson9.cpp
6. C++ Level 2 (FUNCTIONS PROGRAMMING)/: C++ Level 2.sln  CMakeLists.txt  README.md
6. C++ Level 2 (FUNCTIONS PROGRAMMING)/C++ Level 2/: ImportantThings.h  L10_RangedLoop.h  L11_ValidateNumber.h  L12_BitwiseAndOP.h  L13_BitwiseOrOP.h  L14_DeclarationVsDefinition.h  L15_DefaultParameters.h  L16_FunctionOverloading.h  L17_CallStackOrCallHierarchy.h  L18_VisualStudio2022TIPS.h  L19_FunctionRecursion.h  L20_StaticVariables.h  L21_AutomaticVariables.h  L22_RegisterVariables.h  L23ToL25_Notes.txt  L23_IntegerFormat_printf.h  L24_FloatFormat_printf.h  L25_StringAndCharFormat_PrintF.h  L26_setw_mainpulator.h  L27_TwoDimensionalArrays.h  L28_IntroductionAndDeclarationAndInitializationToVectors.h  L29_AddElements.h  L30_VectorOfSturcture.h  L31_RemoveElementes.h  L32_VectorFunctions.h  L33_ReferenceReview.h  L34_CreatingRefrences.h  L35_WhatIsPointer.h  L36_DereferencingPointer.h  L37_CommonMistakesWithPointers.h  L38_PointersVsReferences.h  L39_CallByReferenceUsingPointers.h  L40_PointersAndArrays.h  L41_PointersAndStructures.h  L42_PointersAndVoid.h  L43_MemoryManagement_NewAndDelete.h  L44_DynamicArraysNewAndDelete.h  L45_StackVsHeap.h  L46_AccessElements.h  L47_ChangeElements.h  (+19 more)
6. C++ Level 2 (FUNCTIONS PROGRAMMING)/Include/Homeworks/: AllLessonsHomeworksInclude.hpp  Lesson27HW.hpp  Lesson9HW.hpp
6. C++ Level 2 (FUNCTIONS PROGRAMMING)/Include/Lessons/: AllLessonsInclude.hpp  Lesson10.hpp  Lesson11.hpp  Lesson13.hpp  Lesson19.hpp  Lesson22.hpp  Lesson23.hpp  Lesson25.hpp  Lesson26.hpp  Lesson27.hpp  Lesson28.hpp  Lesson29.hpp  Lesson31.hpp  Lesson32.hpp  Lesson36.hpp  Lesson41.hpp  Lesson42.hpp  Lesson46.hpp  Lesson47.hpp  Lesson52.hpp  Lesson53.hpp  Lesson55.hpp  Lesson56.hpp  Lesson57.hpp
6. C++ Level 2 (FUNCTIONS PROGRAMMING)/SRC/: main.cpp
6. C++ Level 2 (FUNCTIONS PROGRAMMING)/SRC/Homeworks/: Lesson27HW.cpp  Lesson29HW.cpp  (+1 more)
7. Algorithms Level 3/: AllStandard.h  CMakeLists.txt  Problem1.h  Problem2.h  Problem3.h  README.md  main  main.cpp
7. Algorithms Level 3/HeadersAfterCourse/: Operations.h
7. Algorithms Level 3/HeadersBeforeCourse/: Comparing.h  Employee.h  Print.h  Random.h  Read.h
7. Algorithms Level 3/SRC/: CMakeLists.txt  main.cpp
7. Algorithms Level 3/StartProgram/: StartMyProgram.cpp  StartMyProgram.hpp
7. Algorithms Level 3/include/: IncludeAllHeaders.hpp
(+904 files in other folders)
